# OptsFile

./: pyproject.toml  pytest.ini  setup.cfg  setup.py
src/OptsFile/: __init__.py  abc.py  read_node.py  reader.py
test/: sample.of  test_read_node.py  test_reader.py
