[metadata]
name = OptsFile
version = 0.0.1
author = Jeremy Montera
author_email = wittkopp.jeremy@gmail.com
description = ...
long_description = file: README.mode
classifiers = Programming Language :: Python :: 3

[options]
include_package_data = True
package_dir = 
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pytest
    black
    isort
    flake8

[options.packages.find]
where = src

[flake8]
ignore = E203
max-line-length = 88